###############################
NGRT4N/RealOpInsight ChangeLog
###############################

2.2.0 (beta)
--------------
  * Added support for Zenoss. Has been tested with Zenoss 4.x but would work
    with Zenoss 3.x
  * Brings a new criticity model introducing a high manageability of incidents
    (UNKNOWN, CRITICAL, MAJOR, MINOR, NORMAL)
  * Support some Zabbix's meta tag (e.g. {HOST.NAME}) in alarm messages
  * Brings new and optimized data structures and algorithms for better
    performances and a reduced memory footprint
  * Added buttons for back, forward and stop actions through the embedded browser
  * Added support for zeromq 3.x (ticket #3)
  * Added man pages for the commands ngrt4n-manager, ngrt4n-oc and ngrt4n-editor
  * Fixed compilation problems on c++11 (tickets #4 and #5)
  * Fixed bug #6 when the Operations Console crashes when the colon is ommited
    on the authchain for Zabbix

2.1.0
--------------
  * Added option for hiding/showing the auth chain
  * Fixed bug #1: The severities of Zabbix triggers are now supported.
  * Updated the preferences window for easing the setting of monitoring settings

2.1.0beta1
--------------
  * Added support for Zabbix: Requires Zabbix >= 1.7. 
    Known Issues: the severities of triggers are not yet taken into account. 
    All problems are simply reported. This will be fixed before the stable 
    release (ticket #1). 

  * Released the UI Module and the Daemon Module as seperate packages. 
    The UI Module became 'RealOpInsight' while the Daemon Module, specific 
    to Nagios, is now called 'Daemon Service for Nagios'.

  * VERY IMPORTANT: To support both Zabbix and Nagios without additional 
    configuration constraints for the administrators, the format of configuration 
    files has been modified to detect automatically the target monitoring system 
    at the loading time. Nevertheless, for backward compatibility, the former 
    format is still supported and detected as compatible with Nagios. 