@@ -36,13 +36,13 @@ namespace utils {
     return QDateTime::fromTime_t(tt).toString().toStdString();}
   inline void alert(const QString & msg) {
     QMessageBox::warning(0, QObject::tr("%1 - Warning").arg(appName), msg, QMessageBox::Yes);}
-  QString statusToString(const qint32& _status);
+  QString criticityToText(const qint32& _status);
   void clear(CoreDataT& data);
   QString getAbsolutePath(const QString& _path);
   MonitorBroker::CriticityT computeCriticity(const int& _monitor, const int& _statusOrSeverity);
   int computePropCriticity(const qint8& _criticity, const qint8& propRule);
-  QColor getColor(const int &_criticity);
-  QIcon getTreeIcon(const int &_criticity);
+  QColor computeColor(const int &_criticity);
+  QIcon computeCriticityIcon(const int &_criticity);
   bool findNode(NodeListT& bpnodes, NodeListT& cnodes, const QString& nodeId, NodeListT::iterator& node);
   bool findNode(CoreDataT* coreData, const QString& nodeId, NodeListT::iterator& node);
 } //NAMESPACE
