@@ -6,8 +6,9 @@ NGRT4N/RealOpInsight ChangeLog
 --------------
   * Added support for Zenoss. Has been tested with Zenoss 4.x but would work
     with Zenoss 3.x
-  * Brings a new criticity model introducing a high manageability of incidents
+  * New criticity model introducing a fine-grained manageability of incidents
     (UNKNOWN, CRITICAL, MAJOR, MINOR, NORMAL)
+  * Added System Tray Icon for notification the main window is inactive
   * Support some Zabbix's meta tag (e.g. {HOST.NAME}) in alarm messages
   * Brings new and optimized data structures and algorithms for better
     performances and a reduced memory footprint
